--- a/lab_1/settings.json
+++ b/lab_1/settings.json
@@ -3,9 +3,9 @@
 "folder1": "task1",
 "folder2": "task2",
 "given_text": "base_text.txt",
-"coding": "encoded_text.txt",
+"encryption": "encryption_text.txt",
 "key_file": "key.json",
-"decoding": "decoded_text.txt",
+"decryption": "decryption_text.txt",
 "original_text": "code4.txt",
 "freq_analys": "freq.json",
 "step": 3 
